--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.0.10
+  hive: ^2.2.1
+  get: ^4.6.5
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
