--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,18 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+  test:
+  mocktail: ^0.3.0
+  faker: 2.0.0
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_android: assets/logo.png
+  image_path_ios: assets/logo.png
+  adaptive_icon_background: assets/logo.png
+  adaptive_icon_foreground: assets/logo.png
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
