--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.parking_lot_app">
    <application
-        android:label="parking_lot_app"
+        android:label="Seu João Estacionamento"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
